--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,7 +116,7 @@ body  {
 }
 .twoColHybRtHdr #header h3 {
 	color: #666;
-	font-family: 'museo500'; 
+	font-family: 'archerpro'; 
 	font-size: 15px;
 	margin: 0px;
 	letter-spacing: 1px;
