--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ body  {
 
 .twoColHybRtHdr #headcontent {
 	background-color: #FFF;
-	font-family: 'archerprolight', sans-serif;
+	font-family: 'archerpro', sans-serif;
 	font-size: 50px;
 }
 
