--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,7 +221,7 @@ body  {
 	color: #09C;
 }
 .twoColHybRtHdr #container #mainContent p {
-	font-family: 'museo300';
+	font-family: 'gotham';
 	font-size: 16px;
 	line-height: 20px;
 	color: #333;
