--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,8 +109,8 @@ body  {
 }
 .twoColHybRtHdr #header h4 {
 	color: #666;
-	font-family: 'museo100'; 
-	font-size: 14px;
+	font-family: 'archerpro'; 
+	font-size: 13px;
 	margin: 0px;
 	letter-spacing: 1px;
 }
