--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,7 +109,7 @@ body  {
 }
 .twoColHybRtHdr #header h4 {
 	color: #666;
-	font-family: 'archerpro'; 
+	font-family: 'archerprolight'; 
 	font-size: 14px;
 	margin: 0px;
 	letter-spacing: 1px;
