--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -14,9 +14,16 @@ comments: true
     }
 </style>
 
-<meta name="keywords" content="">
-
-<meta name="description" content="">
+{% if page.desc %}
+<meta name="description" content="{{ page.desc }}"/>
+{% else %}
+<meta name="description" content="I'm a Computer Scientist and Software Engineer, I enjoy Artificial Intelligence, Programming, Software Engineering."/>
+{% endif %}
+{% if page.keywords %}
+<meta name="keywords" content="{{ page.keywords }}"/>
+{% else %}
+<meta name="keywords" content="Software, Engineering, Computer Science, Science, Artificial Intelligence, Machine Learning, Programming"/>
+{% endif %}
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
