--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,8 @@
 </head>
 
 <body class="twoColHybRtHdr">
-
-<div id="container"><!-- InstanceBeginEditable name="headerNav" -->
-  <div id="header" style='margin-top:-30px;'>
+        <div class="sidebar" style="height:100%;">
+  <div id="header" style='margin-top:25px; margin-left:18px;'>
     
       <tr>
         <h1><a href="../index.html">Rodrigo Araújo</a></h1>
@@ -51,7 +50,7 @@
     <tr>
     </tr>
     <tr>
-      <h3 style="padding-top:10px;">
+      <h3 style="padding-top:10px; margin-left:11px;">
         <!--<a href="./HomePage.html"><img src="./images/back.png" width="15"></a>
               <tr>
         <td>&nbsp;</td>
@@ -67,10 +66,13 @@
     <!-- end #header -->
   </div>
 
-  <div style="margin-left:190px;margin-top:-138px;" id="mainContent" class="hidden">
+<div id="container" style="width:0px;"><!-- InstanceBeginEditable name="headerNav" -->
+
+
+  <div style="margin-left:230px;margin-top:-193px;" id="mainContent" class="hidden">
     
     {{ content }}
-
+        
   </div>
 
 
@@ -84,7 +86,7 @@
   <!-- InstanceEndEditable -->
   <!-- end #container --></div>
     
-
+</div>
 </body>
 
 <script>
