--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -50,9 +50,9 @@ comments: true
 </head>
 
 <body class="twoColHybRtHdr">
-
+        <div class="sidebar" style="height:100%;">
 <div id="container"><!-- InstanceBeginEditable name="headerNav" -->
-  <div id="header" style='margin-top:-30px;'>
+  <div id="header" style='margin-top:-55px; padding-top:25px;'>
     
       <tr>
         <h1><a href="../../../../../index.html">Rodrigo Araújo</a></h1>
@@ -78,15 +78,15 @@ comments: true
     
     <!-- end #header -->
   </div>
-  <div style="width:330px;" id="sidebar">
-       <ul>
+  <div style="width:400px; margin-top:0px;" id="sidebar">
+       <ul style="padding-top: 18px;">
                <hr/>
           <li style="font-size:22px;"><a href="/archives/">Archives</a></li>
           <hr/>
       </ul>
 </div> 
 
-  <div style="margin-left:189px;margin-top:-128px;" id="mainContent" class="hidden">
+  <div style="margin-left:235px;margin-top:-128px;" id="mainContent" class="hidden">
           <h1> <div style="margin-top:-10px;line-height:1.2em;">{{ page.title }} </div></h1>
           <div style="margin-top:-20px;color:#E11F00;">{{ page.date | date: "%-d %B %Y" }}</div>
           &nbsp;
@@ -112,7 +112,7 @@ comments: true
 
 
   </div>
-
+  </div>
 
 <!-- InstanceEndEditable --><!-- InstanceBeginEditable name="subNav" --><!-- InstanceEndEditable --><!-- InstanceBeginEditable name="mainContent" --><!-- InstanceEndEditable -->
   <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats -->
@@ -148,7 +148,7 @@ $(window).scroll(function() {                  // assign scroll event listener
     } else {                                   // apply position: static
         $('#sidebar').css({                      // if you scroll above it
             position: 'static',
-            'margin-top': '30px'
+            'margin-top': '0px'
         });
     }
 
