--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -63,7 +63,7 @@ comments: true
     <tr>
     </tr>
     <tr>
-      <h3 style="padding-top:10px;">
+      <h3 style="padding-top:10px; margin-left:2px;">
         <!--<a href="./HomePage.html"><img src="./images/back.png" width="15"></a>
               <tr>
         <td>&nbsp;</td>
