--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -41,26 +41,17 @@
 	<ul>
 		<li><a href="{{ site.BASE_PATH }}/about">Who I am</a></li>
 		<li>
-			<div id="workexpand"><a href="{{ site.BASE_PATH }}/work">The work I do</a>
+			<div id="workexpand"><a href="{{ site.BASE_PATH }}/work">Publications</a>
 			<div id="subitem">
 			<ul>
 				<li>
-					<a href="{{ site.BASE_PATH }}/work/#research">Research</a>
-				</li>
-				<li>
-					<a href="{{ site.BASE_PATH }}/work/#industry">Industry</a>
-				</li>
-				<li>
-					<a href="{{ site.BASE_PATH }}/work/#pub">Publications</a>
+					<a href="{{ site.BASE_PATH }}/work/#pub">Papers</a>
 				</li>
 				<li>
 					<a href="{{ site.BASE_PATH }}/work/#talk">Talks</a>
 				</li>
 				<li>
 					<a href="{{ site.BASE_PATH }}/work/#releases">Releases</a>
-				</li>
-				<li>
-					<a href="{{ site.BASE_PATH }}/work/#ta">Teaching</a>
 				</li>
 			</ul>
 			</div>
