--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ src: url('/assets/fonts/proximanova/proximanovaregular.otf');
 
 
 #archivetitle{
-	font-family: "Merriweather";
+	font-family: "Open Sans";
 }
 
 .pages{
@@ -124,12 +124,12 @@ list-style: none;
 
 body{
 	color: #2c3e50;
-	font-family: "Merriweather";
+	font-family: "Open Sans";
 	font-size: 15px;
 }
 
 p{
-	font-family: "Merriweather";
+	font-family: "Opens Sans";
 	line-height: 1.9em !important;
 	color: black;
 }
@@ -300,7 +300,7 @@ article.home div a, article.home pre a { color: #2c3e50; }
 article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
 article img { max-width: 100%; }
 
-h1,h2,h3,h4,h5,h6 { font-family: "Lora", sans-serif; 
+h1,h2,h3,h4,h5,h6 { font-family: "Lato", sans-serif; 
 margin-bottom: 20px;
 font-weight:900;
 }
@@ -310,7 +310,7 @@ article.home h3,
 article.home h4,
 article.home h5,
 article.home h6 {
-	font-family: "Lora", sans-serif;
+	font-family: "Lato", sans-serif;
         text-align:left;
         font-weight: 900;
 	color: #333333;
