--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -693,8 +693,8 @@ body{
 
 p{
 	font-family: "Open Sans";
-	line-height: 1.9em !important;
-	color: black;
+	/*line-height: 1.5em !important;*/
+	color: #333332;
 }
 .sidebar {
 	text-align:center;
