--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
   font-size: 19px;
   color: #404040;
   position: relative;
-  background: #F3F3F3;
+  background: #fff;
 }
 p {
   line-height: 1.6;
@@ -106,7 +106,7 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background: #fff;
+  background: #FFFCF4;
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -245,7 +245,7 @@ img {
 
 footer {
   padding: 30px 0;
-  background: #fff;
+  background: #FFFCF4;
   border-top: 1px #EAEAEA solid;
   margin-top: 50px;
   font-size: 14px;
