--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ src: url('/assets/font/AvenirLTStd-Book.otf');
 }
 
 @font-face {
+font-family: "proximanova";
+src: url('/assets/font/proximanova.otf');
+}
+
+@font-face {
   font-family: "harmony";
   src: url('/assets/font/HarmoniaSansProCyr-Regular.otf')
 }
@@ -21,14 +26,14 @@ src: url('/assets/font/AvenirLTStd-Book.otf');
 }
 
 body {
-  font-family: "bookerly", 'Times New Roman', serif;
-  font-size: 19px;
-  color: #404040;
+  font-family: "harmony", 'Times New Roman', serif;
+  font-size: 18px;
+  color: #484848;
   position: relative;
   background: #fff;
 }
 p {
-  line-height: 1.7;
+  line-height: 1.6;
   margin: 30px 0;
 }
 p a {
