--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -38,6 +38,7 @@ layout: default
     <div class="post-description">
       <p>
         {{ post.excerpt }}
+        <p><a class="btn btn-sm btn-primary" href="{{ post.url  }}/#read-more" role="button">Read more </a>
       </p>
     </div>
     {% endif %}
