--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,3 +17,20 @@ layout: default
   <div id="disqus_thread"></div>
   {% include disqus.html %}
   {% endif %}
+<script>
+ $(function() {
+    var $sidebar   = $("#sidebar"),
+        $window    = $(window),
+        offset     = $sidebar.offset(),
+        topPadding = 0;
+
+    $window.scroll(function() {
+        if ($window.scrollTop() > offset.top) {
+            $("#sidebar").css("margin-top", $window.scrollTop() - offset.top + topPadding);
+        } else {
+            $sidebar.stop().animate({
+                marginTop: 0
+            });
+        }
+    });
+});
