--- a/_sass/components/_typography.scss
+++ b/_sass/components/_typography.scss
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit;
-  color: $text-color;
+  color: $primary;
   &:hover,
   &:focus {
     color: lighten($text-color, 24%);
@@ -103,4 +103,8 @@ p {
   margin: 1.2em 0;
   word-spacing: 0.05em;
   line-height: 1.6em;
+}
+
+.abstract p {
+  font-size: 0.9em;
 }
