--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,14 +6,14 @@
   <span class="author_bio mbm">{{ author.bio }}</span>
   <nav class="nav">
     <ul class="nav-list">
-      {% for page in site.pages %} {% if page.title %}
+      {% for page in site.pages_list %}
       <li class="nav-item">
-        <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
+        <a href="{{ site.url }}{{ page[1] }}">{{ page[0] }}</a>
         {% unless forloop.last %}
           <span>/</span>
         {% endunless %}
       </li>
-      {% endif %} {% endfor %}
+      {% endfor %}
     </ul>
   </nav>
   {% include social-links.html %}
