New font. Again.

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -13,6 +13,11 @@ src: url('/fonts/AvenirLTStd-Book.otf');
 }
 
 @font-face {
+font-family: "lora";
+src: url('/fonts/Lora-Regular.ttf');
+}
+
+@font-face {
 font-family: "proximanova";
 src: url('/fonts/proximanova.otf');
 }
@@ -43,7 +48,7 @@ $border-width:               .0625rem !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:     "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:     "lora", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
