--- a/_sass/components/_global.scss
+++ b/_sass/components/_global.scss
@@ -119,3 +119,12 @@ footer {
     list-style: none;
   }
 }
+sup { 
+    vertical-align: super;
+      font-size: smaller;
+    }
+
+    .footnote {
+      font-size: 13px;
+      font-style: italic;
+    }
