--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -15,6 +15,29 @@ src: url('/fonts/AvenirLTStd-Book.otf');
 @font-face {
 font-family: "lora";
 src: url('/fonts/Lora-Regular.ttf');
+font-weight: normal;
+font-style: normal;
+}
+
+@font-face {
+font-family: "lora";
+src: url('/fonts/Lora-Bold.ttf');
+font-weight: bold;
+font-style: normal;
+}
+
+@font-face {
+font-family: "lora";
+src: url('/fonts/Lora-Italic.ttf');
+font-weight: normal;
+font-style: italic;
+}
+
+@font-face {
+font-family: "lora";
+src: url('/fonts/Lora-BoldItalic.ttf');
+font-weight: bold;
+font-style: italic;
 }
 
 @font-face {
@@ -48,14 +71,14 @@ $border-width:               .0625rem !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:     "lora", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:     "avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
 $font-family-sidebar:        "avenir" !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root:             17px !default;
+$font-size-root:             16px !default;
 
 $font-size-base:             $font-size-root !default;
 $font-size-lg:               $font-size-root * 1.25 !default;
