--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
       <div class="post-listing">
         <div class="post-content">
         <h1 style="max-width: 45%;">{{ page.title }}</h1>
+        <p style="max-width: 45%; font-size: 14px; font-style:italic;">{{ page.date | date: '%B %d, %Y' }}</p>
+        <hr>
         {{ content }}
         {% include footer.html %}
         </div>
