--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -13,6 +13,25 @@ src: url('/fonts/AvenirLTStd-Book.otf');
 }
 
 @font-face {
+font-family: "avenir";
+src: url('/fonts/AvenirLTStd-Heavy.otf');
+font-weight: bold;
+}
+
+@font-face {
+font-family: "avenir";
+src: url('/fonts/AvenirLTStd-BookOblique.otf');
+font-style: italic;
+}
+
+@font-face {
+font-family: "avenir";
+src: url('/fonts/AvenirLTStd-HeavyOblique.otf');
+font-style: italic;
+font-weight: bold;
+}
+
+@font-face {
 font-family: "lora";
 src: url('/fonts/Lora-Regular.ttf');
 font-weight: normal;
@@ -55,6 +74,8 @@ src: url('/fonts/proximanova.otf');
   src: url('/fonts/bookerly.ttf')
 }
 
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700');
+
 // Custom variables
 
 // Spacing
@@ -72,13 +93,13 @@ $border-width:               .0625rem !default;
 // Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:     "avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
+$font-family-serif:          "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
 $font-family-sidebar:        "avenir" !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root:             16px !default;
+$font-size-root:             18px !default;
 
 $font-size-base:             $font-size-root !default;
 $font-size-lg:               $font-size-root * 1.25 !default;
@@ -86,8 +107,8 @@ $font-size-sm:               $font-size-root * 0.875 !default;
 $font-size-xs:               $font-size-root * 0.75 !default;
 
 $font-size-h1:               2.5rem !default;
-$font-size-h2:               1.75rem !default;
-$font-size-h3:               1.5rem !default;
+$font-size-h2:               1.5rem !default;
+$font-size-h3:               1.2rem !default;
 $font-size-h4:               1.2rem !default;
 $font-size-h5:               1.15rem !default;
 $font-size-h6:               1rem !default;
