--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -6,6 +6,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,400,400italic|Roboto+Mono);
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700,700i,900,900i');
 
 @font-face {
 font-family: "avenir";
