--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -9,10 +9,16 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700,700i,900,900i');
 @import url('https://fonts.googleapis.com/css?family=Lora');
 @import url('https://fonts.googleapis.com/css?family=Lusitana');
+@import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 @font-face {
 font-family: "avenir";
 src: url('/fonts/AvenirLTStd-Book.otf');
+}
+
+@font-face {
+font-family: "Caslon";
+src: url('/fonts/Adobe Caslon Pro Regular.ttf');
 }
 
 @font-face {
@@ -95,14 +101,14 @@ $border-width:               .0625rem !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:     "Lusitana", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:     "Caslon", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:          "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
 $font-family-sidebar:        "avenir" !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root:             18px !default;
+$font-size-root:             20px !default;
 
 $font-size-base:             $font-size-root * 1.05 !default;
 $font-size-lg:               $font-size-root * 1.25 !default;
@@ -111,7 +117,7 @@ $font-size-xs:               $font-size-root * 0.75 !default;
 
 $font-size-h1:               2.5rem !default;
 $font-size-h2:               1.5rem !default;
-$font-size-h3:               1.2rem !default;
+$font-size-h3:               1.9rem !default;
 $font-size-h4:               1.2rem !default;
 $font-size-h5:               1.15rem !default;
 $font-size-h6:               1rem !default;
