--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
       <li class="nav-item">
         <a href="{{ site.url }}{{ page[1] }}">{{ page[0] }}</a>
         {% unless forloop.last %}
-          <span>/</span>
+          <span style="font-size:10px;">/</span>
         {% endunless %}
       </li>
       {% endfor %}
