--- a/_sass/components/_mixins.scss
+++ b/_sass/components/_mixins.scss
@@ -28,6 +28,12 @@
     }
 }
 
+@mixin media-query-max($device) {
+  @media only screen and (max-width: $device) {
+      @content;
+  }
+}
+
 /**
  * Webkit-style focus
  */
