--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -28,25 +28,25 @@
   padding-right: 20px;
 }
 
-@include media-query($large-screen){
-.post-content {
-  max-width:50%;
-  padding-left: 5%;
-}
-}
-
-@include media-query($medium-screen){
-.post-content {
-  max-width:70%;
-  padding-left: 5%;
-}
-}
-
 .post-content h1 {
   max-width: 100% !important;
   line-height: 1.2em;
   font-size: 32px;
   font-family: "Libre Baskerville", Georgia;
+}
+
+@media screen and (min-width: 1300px) {
+  .post-content {
+    padding-left: 5%;
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 1600px){
+  .post-content {
+    padding-left: 5%;
+    width: 50%;
+  }
 }
 
 // Post Section
