--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,73 +2,50 @@
 layout: default
 ---
 
-<h1>Brief introduction</h1>
+<h1>Hey there!</h1>
 
-<p>Hey there, my name is <strong>Rodrigo Araújo</strong>. I live in Vancouver, Canada, though originally from Brazil<a href="#1"><sup>1</sup></a>. I've had many titles: Software engineer, computer scientist, programmer, developer, hacker<a href="#2"><sup>2</sup></a>, musician<a href="#3"><sup>3</sup></a>. But I believe we shouldn't describe ourselves in terms of labels<a href="#4"><sup>4</sup></a> but rather in terms of values, beliefs and actions. Therefore, here is what I do: <strong>I build software and do research in order to help humans achieve higher and greater things.</strong></p>
+<p>I'm <strong>Rodrigo Araújo</strong>. I live in Vancouver, Canada, though originally from Brazil. I'm a Software engineer with a background in Computer Science. 
+    I build software and do research in order to help humans achieve higher and greater things.</p>
 
-<p>I'm currently a graduate student at the University of British Columbia under the Computer Science department. I work as a research software engineer at <a href="https://www.cs.ubc.ca/cs-research/software-practices-lab">SPL</a> and as a teaching assistant helping over thousand students to build better software.</p> 
+<p>
+The first job I fell in love with was working as a machine learning engineer at <a href="https://www.jusbrasil.com.br">Jusbrasil</a> -- 
+<a href="https://www.similarweb.com/fr/top-websites/category/law-and-government/legal">the biggest law and government websites in the world</a> at the time of this writing. 
+It was the first time I felt that the code I wrote directly impacted millions of people.
+</p>
 
-<p>Previously I worked as a machine learning engineer at the lovely and great <a href="https://www.jusbrasil.com.br">Jusbrasil</a>, one of the biggest law and government websites in the world.</p>
+<p>Then, I decided to go to grad school at the beautiful University of British Columbia, 
+    where I was part of the <a href="https://www.cs.ubc.ca/cs-research/software-practices-lab">Software Practices Lab</a> 
+    working as a research software engineer on using machine learning to build reliable self-adaptive distributed systems 
+    (<a href="https://open.library.ubc.ca/cIRcle/collections/ubctheses/24/items/1.0379346">here's my published thesis</a>). 
+    Also around that time I worked as a teaching assistant helping hundreds of students to build better software, where I
+    discovered an unexpected passion for mentoring and teaching. 
+</p>
+
+<p>
+    I had a great time in academia, but I felt I needed to go back to that feeling of building things that have a direct
+    positive impact on people. So I took a senior engineer / tech lead position at  <a href="http://cto.ai/">CTO.ai</a>,
+    building products, data pipelines, and distributed systems that handled copious amounts of data.
+</p>
+
+<p>
+    Now I'm working at <a href="https://www.cmd.com">Cmd</a>, building systems in the cybersecurity space.
+</p>
+
+<p>
+    For more details, head over to my <a href="https://www.linkedin.com/in/rodrigo-silva-de-ara%C3%BAjo-196a9358/">LinkedIn</a> or my <a href="/content/Resume.pdf">resume.</a>
+</p>
 
 <h1>Research and work</h1>
 
-<h2>Vision</h2>
-<p><em><a href="https://www.wsj.com/articles/SB10001424053111903480904576512250915629460">Software</a> <a href="https://a16z.com/2016/08/20/why-software-is-eating-the-world/">is</a> <a href="">eating</a> <a href="https://www.forbes.com/sites/stevedenning/2014/04/11/why-software-is-eating-the-world/#31314bde29a2">the</a> <a href="https://techcrunch.com/2016/06/07/software-is-eating-the-world-5-years-later/">world</a></em> and it's amazing how unreliable and internally broken most software and software practices are. This is mostly due the fact that we are a young field taking its first baby steps, and this is quite exciting. I believe it is our job, as a community, to slowly but steadily improve the way we build software. Thus, one of my personal missions is to <strong>make software more reliable and correct; by both improving software and improving how we build software.</strong></p>
+<p><em><a href="https://www.wsj.com/articles/SB10001424053111903480904576512250915629460">Software</a> <a href="https://a16z.com/2016/08/20/why-software-is-eating-the-world/">is</a> <a href="">eating</a> <a href="https://www.forbes.com/sites/stevedenning/2014/04/11/why-software-is-eating-the-world/#31314bde29a2">the</a> <a href="https://techcrunch.com/2016/06/07/software-is-eating-the-world-5-years-later/">world</a></em> and yet, it's amazing how unreliable and internally broken most software and software practices are. This is mostly due the fact that we are a young field taking its first baby steps, and this is quite exciting. I believe it is our job, as a community, to slowly but steadily improve the way we build software. Thus, one of my personal missions is to <strong>make software more reliable and correct; by both improving software and improving how we build software.</strong></p>
 
 <h2>Interests</h2>
 <p>
-    Currently I'm working on the intersection of artificial intelligence, software engineering, and distributed systems, pursuing ways to:
-    <ul style="color: black;">
-        <li>
-            Build better self-adaptive systems that can change, heal, and optimize in real time in order to make engineers more productive and systems more reliable.
-        </li>
-        <li>
-            Integrate machine learning into software systems; making learning a first-class component, constantly improving the system itself rather than relying on heuristics and manually-performed operations.
-        </li>
-    </ul>
-</p>
-
-<p>I also have interests in:</p>
-
-<p>
 <ul style="color: black;">
-    <li>Distributed Systems and Infrastructure Reliability</li>
+    <li>Distributed Systems</li>
+    <li>Artificial Intelligence and Machine Learning</li>
     <li>Software Engineering</li>
-    <li>Software Design and Architecture</li>
-    <li>Software Analysis, Testing, and Verification</li>
-    <li>Artificial Intelligence, Machine Learning, and how to build better systems using their techniques</li>
+    <li>Analysis, Testing, and Verification of Software</li>
+    <li>A mix and match of all items above</li>
 </ul>
 </p>
-
-<h1> Why I blog and disclaimers </h1>
-
-<p>I write blog posts and essays here for the following reasons:</p>
-
-<p>
-
-<ul style="color: black;">
-    <li>To solidify my knowledge on the discussed topic, as if it was more like of an act of reflection;</li>
-    <li>To help others trying to understand something that I've written about</li>
-</ul>
-</p>
-
-
-<p>However, here are a few things to keep in mind:</p>
-
-<p>
-<ul style="color: black;">
-    <li>All opinions and views are my own;</li>
-    <li>It's very likely that I am painfully wrong on a post that you've read, so:</li>
-    <ul style="color: black;">
-        <li>Don't blindly believe everything I write, question everything <em>(and let me know those questions sometime!)</em></li>
-        <li>Let me know where I made a mistake, it's a win-win game: you teach me something and you learn more about something!</li>
-    </ul>
-</ul>
-</p>
-
-<hr/>
-
-<div class="footnote" id="1"><p>1: Please do not insist on inviting me to play in your soccer team, I've disappointed my people for being a Brazilian and actually awful at soccer.</p></div>
-<div class="footnote" id="2"><p>2: As in actual infosec duties and hobbies</p></div>
-<div class="footnote" id="3"><p>3: As in I actually worked in a band for a good chunk of my life, now it is just a hobby</p></div>
-<div class="footnote" id="4"><p>4: Except in some cases, e.g: formal work settings</p></div>
