--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>Hey there!</h1>
 
-<p>I'm <strong>Rodrigo Araújo</strong>. I live in Vancouver, Canada, though originally from Brazil. I'm a Software engineer with a background in Computer Science. 
+<p>I'm <strong>Rodrigo Araújo</strong>. I live in Vancouver, Canada, though originally from Brazil. I'm a software engineer with a background in Computer Science. 
     I build software and do research in order to help humans achieve higher and greater things.</p>
 
 <p>
@@ -28,7 +28,7 @@ It was the first time I felt that the code I wrote directly impacted millions of
 </p>
 
 <p>
-    Now I'm working at <a href="https://www.cmd.com">Cmd</a>, building systems in the cybersecurity space.
+    Now I'm working at <a href="https://www.cmd.com">Cmd</a>, building distributed systems in the cybersecurity space.
 </p>
 
 <p>
