--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -101,7 +101,7 @@ $border-width:               .0625rem !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:     "Lusitana", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:     "avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:          "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
