--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -111,9 +111,9 @@ $border-width:               .0625rem !default;
 // Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:     -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:          "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
+$font-family-serif:          "Times", "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Hack", "Courier New", monospace !default;
-$font-family-base:           $font-family-sans-serif !default;
+$font-family-base:           $font-family-serif !default;
 $font-family-sidebar:        "avenir" !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
