--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -1,6 +1,8 @@
 /* LAYOUT CSS */
 p {
-  color: black !important;
+  color: #333 !important;
+  font-size: 20px !important;
+  line-height: 1.3 !important;
 }
 
 .cover {
@@ -65,13 +67,13 @@ p {
   .author_job {
     display: block;
     color: $secondary;
-    font-size: 0.55em;
+    font-size: 50%;
     font-weight: 500;
     text-transform: uppercase;
     margin: -5px auto 10px;
   }
   .author_bio {
-    font-size: 85%;
+    font-size: 65%;
     display: block;
     color: black;
   }
@@ -105,7 +107,7 @@ p {
   margin: 0;
   padding: 0;
   list-style: none;
-  font-size: 16px !important;
+  font-size: 14px !important;
   font-weight: bold;
   .nav-item {
     padding-top:10px;
