--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -12,6 +12,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lusitana');
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text&display=swap');
 
 @font-face {
 font-family: "avenir";
@@ -111,7 +112,7 @@ $border-width:               .0625rem !default;
 // Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:     -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:          "Noto Serif", "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
+$font-family-serif:          "Crimson Text", "Libre Baskerville", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Hack", "Courier New", monospace !default;
 $font-family-base:           $font-family-serif !default;
 $font-family-sidebar:        "avenir" !default;
